Fix footer column alignment

--- a/view/css/include/footer.css
+++ b/view/css/include/footer.css
@@ -1,13 +1,22 @@
 footer {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-around;
+    gap: 0.5rem;
+    padding: 1rem .5rem;
     width: 100%;
-    padding: 1rem 0;
     background-color: #2C3E50;
     color: #EEE;
 }
 
+.footer-column {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
 footer p {
+    text-align: center;
     margin: 0;
     padding: 0;
 }
